fucked with bug 1,5 hour
